fixing alignment again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-.game-content,
+.game-content {
+    text-align: center;
+}
 .instructions {
     text-align: center;
 }
